# digonto

./: CLAUDE.md  COPYRIGHT  README.md  TODO.md  citest.sh  compose.ci.yaml  compose.common.yaml  compose.dev.yaml  compose.devtest.yaml  compose.prod.yaml  compose.yaml  copilot-instructions.md  dev.sh  devtest.sh  digonto.code-workspace  package-lock.json  package.json  scripts.sh
.github/workflows/: build.yml  deploy.yml  test.yml
bostro-web/: package-lock.json  package.json
bostro-web/src/: theme.ts
digonto.in/web/: Dockerfile  package-lock.json
engine/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  wasm.bat  win.bat
engine/libs/core/: CMakeLists.txt
engine/libs/core/src/: core.cpp
engine/samples/basic_web/: CMakeLists.txt  main.cpp
engine/samples/basic_win/: CMakeLists.txt  main.cpp
gateway/: .dockerignore  .env  .env.example  .env.mig  .env.test  .eslintignore  .eslintrc.json  .prettierignore  .prettierrc  .swcrc  Dockerfile  compose.ci.yaml  drizzle.config.ts  jest.config.js  jest.config.ts  npm_packages.sh  package-lock.json  package.json  tsconfig.json  vitest.config.ts
gateway/__tests__/: WebRequest.ts  index.test.ts  setup.ts
gateway/drizzle/: 20250607083100_loud_silver_sable.sql
gateway/migrations/: .snapshot-dev.json  Migration20240316043124.ts  Migration20240316050742.ts
gateway/src/: dummy.test.ts  environment.ts  gateway.ts  main.ts  mikro-orm.config.ts  schema.ts
helm/: Chart.yaml
helm/templates/: gateway.yaml  nginx.yaml  pg-secret.yaml  postgres.yaml  secrets.yaml  web.yaml
k8s/temp/: nginx.yaml
k8s/web/: Chart.yaml
nginx/: Dockerfile
nginx/conf.d/: default.conf  new.conf
old_gateway/: .gitignore  .prettierignore  package.json  tsconfig.release.json
old_gateway/src/: environment.ts  mikro-orm.config.ts
old_gateway_v2/: .env.example  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  eslint.config.js  package.json  tsconfig.json  vitest.config.e2e.ts  vitest.config.ts
old_gateway_v2/src/: app.ts  index.ts
old_gateway_v2/tests/: setup.e2e.ts  setup.ts
old_k8s/temp/: nlb.yaml
old_web/: contentlayer.config.ts  next.config.js  package.json
old_web_v2/: Dockerfile  next.config.mjs  package-lock.json  package.json
old_web_v3/: package-lock.json  package.json
terraform/: .terraform.lock.hcl  0-provider.tf  1-vpc.tf  2-igw.tf  3-subnets.tf  4-dev.tf  4-nat.tf  5-routes.tf  6-ec2.tf  7-route53.tf  8-dev.tf  9-sg.tf  outputs.tf
web/:  tsconfig.paths.json  .dockerignore  Dockerfile  contentlayer.config.ts  eslint.config.mjs  jest.config.mjs  next.config.js  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/__tests__/: dummy.test.ts
web/blog/: de-facto-guide-to-kubernetes-on-aws.mdx
web/old/: OldHeader.tsx
web/types/: core.ts
(+178 files in other folders)
